# snake

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: deploy.yml  release.yml  tag.yml  test.yml
ci/: before_deploy.sh
src/: draw.rs  game.rs  main.rs  snake.rs
