[package]
name = "gusbunce-snake"
version = "1.0.0"
authors = ["Augustus Bunce <contact@augustusbunce.com>"]
license = "MIT"
description = "A simple snake game written in Rust using the Piston game engine."
readme = "README.md"
homepage = "https://github.com/gusbuncedev/snake"
repository = "https://github.com/gusbuncedev/snake"
keywords = ["game", "snake", "piston", "rust"]
categories = ["games"]
edition = "2021"

[dependencies]
rand = "0.8.5"
piston_window = "0.131.0"
